// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. modal image 1`] = `
<View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    visible={false}
  >
    <View>
      <View>
        <View
          focusable={true}
        >
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/close-button.png",
              }
            }
          />
        </View>
      </View>
      <ImageZoomView
        enablePreload={true}
        enableSwipeDown={true}
        imageUrls={
          Array [
            Object {
              "aspectRatio": 2,
              "caption": "Caption",
              "credits": "Credits",
              "relativeHeight": 1,
              "relativeHorizontalOffset": 1,
              "relativeVerticalOffset": 1,
              "relativeWidth": 1,
              "url": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&offline=true",
            },
          ]
        }
        saveToLocalByLongPress={false}
        useNativeDriver={true}
      />
      <View
        pointerEvents="none"
      >
        <View>
          <View>
            <Text>
              Caption
            </Text>
            <Text>
              CREDITS
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
  <View
    focusable={true}
  >
    <View>
      <Image
        borderRadius={0}
        fadeDuration={0}
        source={
          Object {
            "testUri": "../../../packages/responsive-image/assets/t.png",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`2. modal image with no caption 1`] = `
<View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    visible={false}
  >
    <View>
      <View>
        <View
          focusable={true}
        >
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/close-button.png",
              }
            }
          />
        </View>
      </View>
      <ImageZoomView
        enablePreload={true}
        enableSwipeDown={true}
        imageUrls={
          Array [
            Object {
              "aspectRatio": 2,
              "caption": undefined,
              "credits": undefined,
              "relativeHeight": 1,
              "relativeHorizontalOffset": 1,
              "relativeVerticalOffset": 1,
              "relativeWidth": 1,
              "url": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&offline=true",
            },
          ]
        }
        saveToLocalByLongPress={false}
        useNativeDriver={true}
      />
      <View
        pointerEvents="none"
      />
    </View>
  </Modal>
  <View
    focusable={true}
  >
    <View
      accessibilityIgnoresInvertColors={true}
    >
      <Image
        fadeDuration={0}
        source={
          Object {
            "testUri": "../../../packages/responsive-image/assets/t.png",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`3. modal image with custom highressize 1`] = `
<View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    visible={false}
  >
    <View>
      <View>
        <View
          focusable={true}
        >
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/close-button.png",
              }
            }
          />
        </View>
      </View>
      <ImageZoomView
        enablePreload={true}
        enableSwipeDown={true}
        imageUrls={
          Array [
            Object {
              "aspectRatio": 2,
              "caption": "Caption",
              "credits": "Credits",
              "relativeHeight": 1,
              "relativeHorizontalOffset": 1,
              "relativeVerticalOffset": 1,
              "relativeWidth": 1,
              "url": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&offline=true",
            },
          ]
        }
        saveToLocalByLongPress={false}
        useNativeDriver={true}
      />
      <View
        pointerEvents="none"
      >
        <View>
          <View>
            <Text>
              Caption
            </Text>
            <Text>
              CREDITS
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
  <View
    focusable={true}
  >
    <View>
      <Image
        borderRadius={0}
        fadeDuration={0}
        source={
          Object {
            "testUri": "../../../packages/responsive-image/assets/t.png",
          }
        }
      />
    </View>
  </View>
</View>
`;
